--- a/myWork.html
+++ b/myWork.html
@@ -7,6 +7,8 @@
 	<link rel="stylesheet" type="text/css" href="CSS\styleMine.css">
 	<link rel= "shortcut icon" type="image/x-icon" href=
 	"images\cornellicon.ico">
+	<link href="https://fonts.googleapis.com/css?family=PT+Sans" rel="stylesheet">
+
 </head>
 
 
@@ -48,9 +50,209 @@
 		</div>
 
 		<div class= "page-title-container">
-			<h1> About Me
+			<h1> My Work
 			</h1>
 		</div>
+
+		<div class= "coursework-container">
+			<h2>Relevant Coursework</h2>
+
+			<div class="engineering-major-flowchart-container">
+				<h3>Computer Science Major (CS)</h3>
+				<div class="engineering-major-flowchart-affiliation-requirements">
+					<h4>Requirements for Major Affiliation: Computer Science</h4>
+					<h4>At least C (not C–) in all completed CS and math courses. GPA ≥2.5 in CS 2110 (or CS 2112) and 2800. GPA ≥2.5 in MATH 1920 and CS 2800. Qualifying courses must be taken at Cornell for a letter grade. Grades in critical math and CS courses may be considered to offset deficiencies in meeting the GPA criteria. Visit the CS undergraduate website to learn more about alternative criteria for affiliation: <a href="https://www.cs.cornell.edu/undergrad/uadmis/becoming-cs-major">www.cs.cornell.edu/undergrad/uadmis/becoming-cs-major</a></h4>
+				</div>
+
+				<div class="engineering-major-fouryear-container">
+					<div class="engineering-major-semester-container">
+						Semester 1
+						<div class="engineering-major-flowchart-course-box" id="complete-class"> <div class="course-label">		MATH 1910</div></div>
+						<div class="engineering-major-flowchart-course-box" id="complete-class"> <div class="course-label">		CHEM 2090</div></div>
+						<div class="engineering-major-flowchart-course-box" id="complete-class"> <div class="course-label">		CS 1110</div></div>
+						<div class="engineering-major-flowchart-course-box" id="complete-class"> <div class="course-label">
+							<span class="original-course-name"> Freshman Writing Seminar 1</span>
+							<span class="alternate-course-name"> ROMS Weird Fiction</span> </div></div>
+						<div class="engineering-major-flowchart-course-box" id="complete-class"> <div class="course-label">		PHYS. ED</div></div>
+					</div>
+
+					<div class="engineering-major-semester-container">
+						Semester 2
+						<div class="engineering-major-flowchart-course-box" id="complete-class"> <div class="course-label">		MATH 1920</div></div>
+						<div class="engineering-major-flowchart-course-box" id="complete-class"> <div class="course-label">		PHYS 1112</div></div>
+						<div class="engineering-major-flowchart-course-box" id="complete-class"> <div class="course-label">
+								<span class="original-course-name"> ENGRI 1XXX</span>
+								<span class="alternate-course-name">Earthquakes!</span></div></div>
+						<div class="engineering-major-flowchart-course-box" id="current-class"> <div class="course-label">
+							<span class="original-course-name"> Freshman Writing Seminar 2</span>
+							<span class="alternate-course-name"> ROMS On Love</span> </div></div>
+						<div class="engineering-major-flowchart-course-box" id="complete-class"> <div class="course-label">		PHYS. ED</div></div>
+					</div>
+
+					<div class="engineering-major-semester-container">
+						Semester 3
+						<div class="engineering-major-flowchart-course-box" id="complete-class"> <div class="course-label">		MATH 2940</div></div>
+						<div class="engineering-major-flowchart-course-box" id="current-class"> <div class="course-label">		PHYS 2213</div></div>
+						<div class="engineering-major-flowchart-course-box" id="complete-class"> <div class="course-label">		CS 2110</div></div>
+						<div class="engineering-major-flowchart-course-box" id="current-class"> <div class="course-label">		CS 2800</div></div>
+						<div class="engineering-major-flowchart-course-box" id="complete-class"> <div class="course-label">
+							<span class="original-course-name"> Liberal Studies</span>
+							<span class="alternate-course-name">ECON 1110</span> </div></div>
+					</div>
+
+					<div class="engineering-major-semester-container">
+						Semester 4
+						<div class="engineering-major-flowchart-course-box" id="current-class"> <div class="course-label">
+								<span class="original-course-name"> ENGRD 2XXX</span>
+								<span class="alternate-course-name">ENGRD 2700</span> </div></div>
+						<div class="engineering-major-flowchart-course-box" id="complete-class"> <div class="course-label">		CHEM 2080</div></div>
+						<div class="engineering-major-flowchart-course-box" id="incomplete-class"> <div class="course-label">		CS 3410</div></div>
+						<div class="engineering-major-flowchart-course-box" id="incomplete-class"> <div class="course-label">		Major Elective</div></div>
+						<div class="engineering-major-flowchart-course-box" id="incomplete-class"> <div class="course-label">		Liberal Studies</div></div>
+					</div>
+
+					<div class="engineering-major-semester-container">
+						Semester 5
+						<div class="engineering-major-flowchart-course-box" id="incomplete-class"> <div class="course-label">		Advisor Appr Elective</div></div>
+						<div class="engineering-major-flowchart-course-box" id="incomplete-class"> <div class="course-label">		Major Elective</div></div>
+						<div class="engineering-major-flowchart-course-box" id="current-class"> <div class="course-label">		CS 3110</div></div>
+						<div class="engineering-major-flowchart-course-box" id="incomplete-class"> <div class="course-label">		Major Elective</div></div>
+						<div class="engineering-major-flowchart-course-box" id="incomplete-class"> <div class="course-label">		Liberal Studies</div></div>
+					</div>
+
+					<div class="engineering-major-semester-container">
+						Semester 6
+						<div class="engineering-major-flowchart-course-box" id="incomplete-class"> <div class="course-label">		Advisor Appr Elective</div></div>
+						<div class="engineering-major-flowchart-course-box" id="incomplete-class"> <div class="course-label">		Major Elective</div></div>
+						<div class="engineering-major-flowchart-course-box" id="incomplete-class"> <div class="course-label">		CS 4820</div></div>
+						<div class="engineering-major-flowchart-course-box" id="incomplete-class"> <div class="course-label">		Major Elective</div></div>
+						<div class="engineering-major-flowchart-course-box" id="incomplete-class"> <div class="course-label">		Liberal Studies</div></div>
+					</div>
+
+					<div class="engineering-major-semester-container">
+						Semester 7
+						<div class="engineering-major-flowchart-course-box" id="incomplete-class"> <div class="course-label">		Advisor Appr Elective</div></div>
+						<div class="engineering-major-flowchart-course-box" id="incomplete-class"> <div class="course-label">		Major Elective</div></div>
+						<div class="engineering-major-flowchart-course-box" id="incomplete-class"> <div class="course-label">		CS 4410</div></div>
+						<div class="engineering-major-flowchart-course-box" id="incomplete-class"> <div class="course-label">		Major Elective</div></div>
+						<div class="engineering-major-flowchart-course-box" id="incomplete-class"> <div class="course-label">		Liberal Studies</div></div>
+					</div>
+
+					<div class="engineering-major-semester-container">
+						Semester 8
+						<div class="engineering-major-flowchart-course-box" id="incomplete-class"> <div class="course-label">		Advisor Appr Elective</div></div>
+						<div class="engineering-major-flowchart-course-box" id="incomplete-class"> <div class="course-label">		Major Elective</div></div>
+						<div class="engineering-major-flowchart-course-box" id="incomplete-class"> <div class="course-label">		Major Elective</div></div>
+						<div class="engineering-major-flowchart-course-box" id="incomplete-class"> <div class="course-label">		</div></div>
+						<div class="engineering-major-flowchart-course-box" id="incomplete-class"> <div class="course-label">		Liberal Studies</div></div>
+					</div>
+				</div>
+
+
+
+
+
+
+			</div>
+
+			<div class="engineering-major-flowchart-container">
+				<h3>Operations Research and Engineering (ORE)</h3>
+				<div class="engineering-major-flowchart-affiliation-requirements">
+					<h4>Requirements for Major Affiliation: Operations Research and Engineering</h4>
+					<h4>At least C in ENGRD 2700 and MATH 2940. GPA ≥2.2 in math, science, and engineering courses (both overall and in the term immediately before affiliation). At least C– in all completed ORIE courses. Good academic standing in the college.</h4>
+				</div>
+
+				<div class="engineering-major-fouryear-container">
+					<div class="engineering-major-semester-container">
+						Semester 1
+						<div class="engineering-major-flowchart-course-box" id="complete-class"> <div class="course-label">		MATH 1910</div></div>
+						<div class="engineering-major-flowchart-course-box" id="complete-class"> <div class="course-label">		CHEM 2090</div></div>
+						<div class="engineering-major-flowchart-course-box" id="complete-class"> <div class="course-label">		CS 1110</div></div>
+						<div class="engineering-major-flowchart-course-box" id="complete-class"> <div class="course-label">
+							<span class="original-course-name"> Freshman Writing Seminar 1</span>
+							<span class="alternate-course-name"> ROMS Weird Fiction</span> </div></div>
+						<div class="engineering-major-flowchart-course-box" id="complete-class"> <div class="course-label">		PHYS. ED</div></div>
+					</div>
+
+					<div class="engineering-major-semester-container">
+						Semester 2
+						<div class="engineering-major-flowchart-course-box" id="complete-class"> <div class="course-label">		MATH 1920</div></div>
+						<div class="engineering-major-flowchart-course-box" id="complete-class"> <div class="course-label">		PHYS 1112</div></div>
+						<div class="engineering-major-flowchart-course-box" id="complete-class"> <div class="course-label">
+								<span class="original-course-name"> ENGRI 1XXX</span>
+								<span class="alternate-course-name">Earthquakes!</span></div></div>
+						<div class="engineering-major-flowchart-course-box" id="current-class"> <div class="course-label">
+							<span class="original-course-name"> Freshman Writing Seminar 2</span>
+							<span class="alternate-course-name"> ROMS On Love</span> </div></div>
+						<div class="engineering-major-flowchart-course-box" id="complete-class"> <div class="course-label">		PHYS. ED</div></div>
+					</div>
+
+					<div class="engineering-major-semester-container">
+						Semester 3
+						<div class="engineering-major-flowchart-course-box" id="complete-class"> <div class="course-label">		MATH 2940</div></div>
+						<div class="engineering-major-flowchart-course-box" id="current-class"> <div class="course-label">		PHYS 2213</div></div>
+						<div class="engineering-major-flowchart-course-box" id="complete-class"> <div class="course-label">		CS 2110</div></div>
+						<div class="engineering-major-flowchart-course-box" id="current-class"> <div class="course-label">		ENGRD 2700</div></div>
+						<div class="engineering-major-flowchart-course-box" id="complete-class"> <div class="course-label">
+							<span class="original-course-name"> Liberal Studies</span>
+							<span class="alternate-course-name">ECON 1110</span> </div></div>
+					</div>
+
+					<div class="engineering-major-semester-container">
+						Semester 4
+						<div class="engineering-major-flowchart-course-box" id="current-class"> <div class="course-label">		MATH 2930, MATH 3040, or CS 2800</div></div>
+						<div class="engineering-major-flowchart-course-box" id="complete-class"> <div class="course-label">		PHYS 2214, CHEM 2080, MATH 2930</div></div>
+						<div class="engineering-major-flowchart-course-box" id="incomplete-class"> <div class="course-label">		ORIE 3120</div></div>
+						<div class="engineering-major-flowchart-course-box" id="incomplete-class"> <div class="course-label">		</div></div>
+						<div class="engineering-major-flowchart-course-box" id="incomplete-class"> <div class="course-label">		Liberal Studies</div></div>
+					</div>
+
+					<div class="engineering-major-semester-container">
+						Semester 5
+						<div class="engineering-major-flowchart-course-box" id="incomplete-class"> <div class="course-label">		ORIE 3300</div></div>
+						<div class="engineering-major-flowchart-course-box" id="incomplete-class"> <div class="course-label">		ORIE 3500</div></div>
+						<div class="engineering-major-flowchart-course-box" id="incomplete-class"> <div class="course-label">			ORIE 3150</div></div>
+						<div class="engineering-major-flowchart-course-box" id="incomplete-class"> <div class="course-label">		Advisor Appr Elective</div></div>
+						<div class="engineering-major-flowchart-course-box" id="incomplete-class"> <div class="course-label">		Liberal Studies</div></div>
+					</div>
+
+					<div class="engineering-major-semester-container">
+						Semester 6
+						<div class="engineering-major-flowchart-course-box" id="incomplete-class"> <div class="course-label">		ORIE 3310</div></div>
+						<div class="engineering-major-flowchart-course-box" id="incomplete-class"> <div class="course-label">		ORIE 3510</div></div>
+						<div class="engineering-major-flowchart-course-box" id="incomplete-class"> <div class="course-label">		Behavioral Science</div></div>
+						<div class="engineering-major-flowchart-course-box" id="incomplete-class"> <div class="course-label">			</div></div>
+						<div class="engineering-major-flowchart-course-box" id="incomplete-class"> <div class="course-label">		Liberal Studies</div></div>
+					</div>
+
+					<div class="engineering-major-semester-container">
+						Semester 7
+						<div class="engineering-major-flowchart-course-box" id="incomplete-class"> <div class="course-label">		Major Appr Elective</div></div>
+						<div class="engineering-major-flowchart-course-box" id="incomplete-class"> <div class="course-label">		ORIE Elective</div></div>
+						<div class="engineering-major-flowchart-course-box" id="incomplete-class"> <div class="course-label">		ORIE 4580</div></div>
+						<div class="engineering-major-flowchart-course-box" id="incomplete-class"> <div class="course-label">		Advisor Appr Elective</div></div>
+						<div class="engineering-major-flowchart-course-box" id="incomplete-class"> <div class="course-label">		Liberal Studies</div></div>
+					</div>
+
+					<div class="engineering-major-semester-container">
+						Semester 8
+						<div class="engineering-major-flowchart-course-box" id="incomplete-class"> <div class="course-label">		ORIE Elective</div></div>
+						<div class="engineering-major-flowchart-course-box" id="incomplete-class"> <div class="course-label">		ORIE Elective</div></div>
+						<div class="engineering-major-flowchart-course-box" id="incomplete-class"> <div class="course-label">		Major Elective</div></div>
+						<div class="engineering-major-flowchart-course-box" id="incomplete-class"> <div class="course-label">		Major Elective</div></div>
+						<div class="engineering-major-flowchart-course-box" id="incomplete-class"> <div class="course-label">		Liberal Studies</div></div>
+					</div>
+				</div>
+
+
+
+
+
+
+			</div>
+
+		</div>
+
 
 
 
@@ -82,4 +284,6 @@
 
 
 </body>
+
+<script src="script.js"></script>
 </html>
