--- a/index.html
+++ b/index.html
@@ -19,13 +19,19 @@
             <li class="nav-link" ><a href="index.html">Home</a></li>
             <li class="nav-link"><a href="resume.html">Resume</a></li>
             <li class="nav-link" ><a  href="team.html">My Work</a></li>
-						<li class="nav-link" id="dropdown-content">Contact Me
+						<li class="nav-link" id="dropdown-content">Gallery
+							<!-- <div class="nav-bar-collapsable-column">
 								<a href="#">Facebook</a>
 								<a href="#">Github</a>
 								<a href="#">LinkedIn</a>
+							</div> -->
 						</li>
+						<li class="social-media-link" ><a href="https://www.github.com/LuisLondono">  <img src="images/githubLogo.svg" alt=""></a></li>
+						<li class="social-media-link" ><a href="https://www.facebook.com/luislondonoramos"><img src="images/facebookLogo.svg" alt=""></a></li>
+						<li class="social-media-link" ><a href="https://www.linkedin.com/in/luislondonoramos"><img src="images/linkedinLogo.svg" alt=""></a></li>
 
           </ul>
+
         </nav>
 
         </div>
@@ -42,21 +48,31 @@
 						<img src="images/shpeHeadshot2018.jpg" alt="me">
 					</div>
 
-					<!-- <div id="dummy-portrait-padding">
 
-					</div> -->
+					<!-- <div id="dummy-portrait-padding"> -->
+					<!-- </div> -->
 
 				</div>
 
 				<div class="aboutme-container">
 					<h3> Welcome to my Website!</h3>
 					<hr>
-					<p> My name is Luis and I am sophomore computer science student at Cornell University with minors in Operations Research and Business. I am interested in mobile & frontend app development and data analytics and I am currently looking for summer internships to explore these interests. </p>
+					<p> My name is Luis and I am sophomore computer science student at Cornell University with minors in Operations Research and Business. </p>
 
-					<p> Aside from coursework I am also active on campus in a variety of facets: I am secretary of the Society of Hispanic Professional Engineers, web developer for Cornell Hyperloop and I participate in Intramural Volleyball and biking club.</p>
+					<p> Aside from coursework I am also active on campus in a variety of facets:
+					</p>
+					<ul>
+						<li> I am secretary of the Society of Hispanic Professional Engineers (SHPE)</li>
+						<li>I participate in Intramural Volleyball and biking club</li>
+						<li> I am a web developer for Cornell Hyperloop</li>
+					</ul>
+
+					<p>I am interested in mobile & frontend app development and data analytics and I am currently looking for summer internships to explore these interests.</p>
+
 					<hr>
 
 					<h4>Feel free to contact me for inquiries!</h4>
+					<p>lhl49@cornell.edu</p>
 				</div>
 
 			</div>
