--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
 		<meta charset="utf-8">
 		<title>Luis Londono</title>
 		<link rel="stylesheet" href="css/main.css">
+		<link rel= "shortcut icon" type="image/x-icon" href=
+		"images\cornellicon.ico">
 	</head>
 	<body class="page">
 
