--- a/resume.html
+++ b/resume.html
@@ -1,179 +1,164 @@
 <!DOCTYPE html>
-<html>
-<head>
-	<title>
-		Luis's Resume
-	</title>
-	<!-- <link href="https://fonts.googleapis.com/css?family=Oxygen|PT+Sans|Poppins" rel="stylesheet"> -->
-	<!-- <link href="https://fonts.googleapis.com/css?family=Oxygen|Poppins" rel="stylesheet"> -->
-	<!-- <link href="https://fonts.googleapis.com/css?family=PT+Sans" rel="stylesheet"> -->
-	<link rel="stylesheet" type="text/css" href="CSS\styleMine.css">
-	<link rel= "shortcut icon" type="image/x-icon" href=
-	"images\cornellicon.ico">
-</head>
+<html lang="en" dir="ltr">
+	<head>
+		<meta charset="utf-8">
+		<title>Luis' Resume</title>
+		<link rel="stylesheet" href="css/main.css">
+		<link rel= "shortcut icon" type="image/x-icon" href=
+		"images\cornellicon.ico">
+	</head>
+	<body class="page">
 
-<body class="webpage">
-	<div class="webpage-content-box">
-
-		<div class = "header-main">
-
-			<div class="my-logo">
-				Luis Londoño Ramos
-			</div>
+		<header>
+      <div class="navbar-container">
+        <div class="navbar-logo">
+          <a href="index2.html">Luis Hernando Londono</a>
+        </div>
 
 
-			<div id="navigation-bar">
-					<a class="button" href="index">Home</a>
-					<a class="button" href="myWork">My Work</a>
-					<a class="button" href="gallery">Gallery</a>
-					<a class="button" href="resume">Résumé</a>
+        <nav>
+          <ul>
+            <li class="nav-link" ><a href="https://luislondono.com/">Home</a></li>
+            <li class="nav-link"><a href="resume">Resume</a></li>
+            <li class="nav-link" ><a  href="myWork">My Work</a></li>
+						<li class="nav-link" id="dropdown-content">Gallery
+							<!-- <div class="nav-bar-collapsable-column">
+								<a href="#">Facebook</a>
+								<a href="#">Github</a>
+								<a href="#">LinkedIn</a>
+							</div> -->
+						</li>
 
-			</div>
+						<li class="social-media-link" ><a href="https://www.github.com/LuisLondono">  <img src="images/githubLogo.svg" alt=""></a></li>
+						<li class="social-media-link" ><a href="https://www.facebook.com/luislondonoramos"><img src="images/facebookLogo.svg" alt=""></a></li>
+						<li class="social-media-link" ><a href="https://www.linkedin.com/in/luislondonoramos"><img src="images/linkedinLogo.svg" alt=""></a></li>
 
+          </ul>
 
-			<div id="social-media-bar">
-					<a class="social-media-links" href="https://www.instagram.com/luislondono.co/?hl=en">
-						<img src="images/instagramLogo.svg">
-					</a>
+        </nav>
 
-					<a class="social-media-links"	href="https://github.com/luislondono">
-							<img src="images/github.svg">
-					</a>
+        </div>
 
-					<a class="social-media-links"	href="https://www.linkedin.com/in/luis-londono-873896150/">
-						<img src="images/linkedinLogo.svg">
-					</a>
+    </header>
 
-			</div>
+		<div class="page-content">
 
+			<!-- <h1>Résumé</h1> -->
 
-
-		</div>
-
-		<div class= "page-title-container">
-			<h1> Résumé</h1>
-		</div>
-
-
-		<div class="resume">
-			<div class="resume-header">
-				<h1><a href="https://docs.google.com/document/d/1av1XlOl_ZTY2W7YGD1Kn3YUUMBhXLhLa5DjAMa0V2_I/edit?usp=sharing">Luis Londono Ramos</a></h1>
-				<p><a href="mailto:lhl49@cornell.edu">lhl49@cornell.edu</a>
-			</div>
-
-			<div class="resume-body">
-
-				<div class="resume-subsection" id="Education">
-					<h1>Education:</h1>
-
-					<div class="resume-subsection-body">
-						<div class="resume-subsection-body-item">
-							<p><em>Cornell University, College of Engineering</em><span class="resume-date">Expected Graduation: May 2021</span></p>
-							<div class="indented">
-								Bachelor of Science: <a href="http://www.orie.cornell.edu/academics/undergraduate/requirements.cfm">Operations Research and Engineering</a>
-								<p>Dyson Business Minor
-							</div>
-						</div>
-						<div class="resume-subsection-body-item">
-							Relevant Coursework: Multivariable Calculus, Linear Algebra, iOS	Development
-							<div style="padding-left:156px">
-							Honors Inorganic Chemistry, Python, OO Programming</p>
-							</div>
-						</div>
-
-
-						<div class="resume-subsection-body-item">
-							<p><em><a href="https://en.wikipedia.org/wiki/Hunter_College_High_School">Hunter College High School</a> – 93.8 GPA</em><span class="resume-date">Graduation: June 2017</span>
-							<p>74 94th St, NYC</p>
-								<div class="indented">
-									National Hispanic Scholar
-								</div>
-						</div>
-
-						<div class="resume-subsection-body-item">
-							<p><em><a href="https://www.nymathcircle.org/about-us">Math Circle-</a><a href="https://en.wikipedia.org/wiki/Courant_Institute_of_Mathematical_Sciences">NYU Courant Institute </a></em> <span class="resume-date">June 2014 – 2015</span></p>
-						</div>
-
-
-					</div>
+			<div class="resume">
+				<div class="resume-header">
+					<h1><a href="https://docs.google.com/document/d/1av1XlOl_ZTY2W7YGD1Kn3YUUMBhXLhLa5DjAMa0V2_I/edit?usp=sharing">Luis Hernando Londono</a></h1>
+					<p><a href="mailto:lhl49@cornell.edu">lhl49@cornell.edu</a>
 				</div>
 
-				<div class="resume-subsection" id="Experience">
-					<h1>Experience:</h1>
-					<div class="resume-subsection-body">
-						<div class="resume-subsection-body-item">
-							<em><a href="http://shpe.cornell.edu/eboard.html">Society of Hispanic Professional Engineers Secretary &amp; Rep</a></em><span class="resume-date">Sept. 2017 –Present</span></p>
-							<ul class="disc-list">
-								<li>Responsible for underclassman outreach: consistently advertising organization
-									<p>events: corporate, recreational, and professional development.</p></li>
-							</ul>
-						</div>
+				<hr>
 
-						<div class="resume-subsection-body-item">
-							<em>Cornell Engineering Summer Program Assistant</em><span class="resume-date">June - August 2018</span></p>
-							<ul class="disc-list">
-								<li>Assisted in a six-week summer program for pre-freshmen students intended to
-									 <p>help acclimate them to an engineering curriculum. Helped a cohort of 30+ kids learn</p>
-									 <p> introductory-level Python.</p></li>
-							</ul>
-						</div>
+				<div class="resume-body">
 
-						<div class="resume-subsection-body-item">
-							<em>Dyson Research Assistant</em><span class="resume-date">June 2018 - Present</span></p>
-							<ul class="disc-list">
-								<li>Worked under Professor Glen Dowell studying the sustainability of
-									<p>corporations and their environmental performance.</p>
+					<div class="resume-subsection" id="Education">
+						<h1>Education:</h1>
+
+						<div class="resume-subsection-body">
+							<div class="resume-subsection-body-item">
+								<p><em>Cornell University, College of Engineering</em><span class="resume-date">Expected Graduation: May 2021</span></p>
+								<div>
 									<ul>
-										<li>Utilized D&B API to optimize the collection of data for a variety of
-										<p>international companies.</li>
+										<li>Major: <a href="http://www.orie.cornell.edu/academics/undergraduate/requirements.cfm">B.S. Computer Science</a> </li>
+										<li>Minor: Dyson Business Minor</li>
 									</ul>
-							</ul>
-						</div>
 
-						<div class="resume-subsection-body-item">
-							<em>Governor’s Island Interpreter </em><span class="resume-date">June 2016-June 2017</span></p>
-							<ul class="disc-list">
-								<li>Assisted Park Rangers in maintaining the historical sector of the island and
-								<p>served as a tour guide for the island’s 2000 daily visitors. </li>
-							</ul>
+
+								</div>
+								<div class="indented" id="coursework">
+									Relevant Coursework: Multivariable Calculus, Linear Algebra, iOS	Development, Discrete Structures, Python, OO Programming
+								</div>
+							</div>
+
+
+
+							<div class="resume-subsection-body-item">
+								<p><em><a href="https://en.wikipedia.org/wiki/Hunter_College_High_School">Hunter College High School</a> – 93.8 GPA</em><span class="resume-date">Graduation: June 2017</span>
+								<p>74 94th St, NYC</p>
+									<div class="indented">
+										National Hispanic Scholar
+									</div>
+							</div>
+
+							<div class="resume-subsection-body-item">
+								<p><em><a href="https://www.nymathcircle.org/about-us">Math Circle-</a><a href="https://en.wikipedia.org/wiki/Courant_Institute_of_Mathematical_Sciences">NYU Courant Institute </a></em> <span class="resume-date">June 2014 – 2015</span></p>
+							</div>
+
+
 						</div>
 					</div>
-				</div>
 
-				<div class="resume-subsection" id="Skills">
-					<h1>Skills:</h1>
-					<div class="resume-subsection-body">
-						<div class="resume-subsection-body-item">
-							<ul>
-								<li>Fluent in Spanish.</li>
-								<li>Proficient in HTML, CSS, Javascript, Python, Java, Swift, LaTeX.</li>
-								<li>Dependable, coordinated and organized.</li>
-							</ul>
+					<div class="resume-subsection" id="Experience">
+						<h1>Experience:</h1>
+						<div class="resume-subsection-body">
+							<div class="resume-subsection-body-item">
+								<em>Dyson Research Assistant</em><span class="resume-date">June 2018 - Present</span></p>
+								<div class="disc-list">
+									<div class="position-description">
+										Worked under Professor Glen Dowell studying the environmental sustainability of corporations, their reputations, and their executive demographics over time.
+									</div>
+									<ul>
+										<li>Coupled openpyxl & requests Python Libraries to optimize collection of company statistics from  D&B API cutting time invested in data entry by 75%.
+										</li>
+									</ul>
+								</div>
+							</div>
+
+							<div class="resume-subsection-body-item">
+								<em><a href="http://shpe.cornell.edu/eboard.html">Society of Hispanic Professional Engineers Secretary &amp; Rep</a></em><span class="resume-date">Sept. 2017 –Present</span></p>
+								<ul class="disc-list">
+									<li>Responsible for underclassman outreach: consistently advertising organization
+										<p>events: corporate, recreational, and professional development.</p></li>
+								</ul>
+							</div>
+
+							<div class="resume-subsection-body-item">
+								<em>Cornell Engineering Summer Program Assistant</em><span class="resume-date">June - August 2018</span></p>
+								<ul class="disc-list">
+									<li>Assisted in a six-week summer program for pre-freshmen students intended to
+										 <p>help acclimate them to an engineering curriculum. Helped a cohort of 30+ kids learn</p>
+										 <p> introductory-level Python.</p></li>
+								</ul>
+							</div>
+
+
+							<div class="resume-subsection-body-item">
+								<em>Governor’s Island Interpreter </em><span class="resume-date">June 2016-June 2017</span></p>
+								<ul class="disc-list">
+									<li>Assisted Park Rangers in maintaining the historical sector of the island and
+									<p>served as a tour guide for the island’s 2000 daily visitors. </li>
+								</ul>
+							</div>
+						</div>
+					</div>
+
+					<div class="resume-subsection" id="Skills">
+						<h1>Skills:</h1>
+						<div class="resume-subsection-body">
+							<div class="resume-subsection-body-item">
+								<ul>
+									<li>Fluent in Spanish.</li>
+									<li>Proficient in HTML, CSS, Javascript, Python, Java, Swift, LaTeX.</li>
+									<li>Dependable, coordinated and organized.</li>
+								</ul>
+							</div>
 						</div>
 					</div>
 				</div>
 			</div>
+
+
+
+
+
+
+
+
 		</div>
 
-	</div>
-
-	<div class= "title-background-image">
-			<img src="images/sasaimaWaterDamage.jpg	">
-	</div>
-
-	<div class="footer">
-		<div id="cornellBranding">
-			<a href="https://www.cornell.edu/">
-			<img src="images\cornellSealGray.png">
-			</a>
-
-			<a href="https://www.engineering.cornell.edu/">
-				<img src="images\cornellEngineeringLogo.svg">
-			</a>
-		</div>
-
-		<p> Copyright &copy; 2018 Luis Londono </p>
-	</div>
-</body>
-
+	</body>
 </html>
